--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
-nginx:
-  image: nginx:1.9.14
+nginx-subfilter-demo:
+  image: nginx:latest
   volumes:
     - ./nginx.conf:/etc/nginx/nginx.conf:ro
   ports:
-    - "80:80"
+    - "8880:80"
+#  environment:
+#    - NGINX_PORT=80
   links:
     - app
+  command: [nginx-debug, '-g', 'daemon off;']
 
 app:
-  image: node:0.10
+  image: node
   volumes:
     - .:/usr/src/app
   command: node /usr/src/app/server.js
