--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,16 @@
+worker_processes  2;  ## Default: 1
+
 events {
-  worker_connections 1024; # increase if you have lots of clients
-  accept_mutex off; # "on" if nginx worker_processes > 1
+  worker_connections 1024; ## Default: 1024 # increase if you have lots of clients
+  accept_mutex on; # "on" if nginx worker_processes > 1
 }
 
 http {
   include mime.types;
-
+  #include /etc/nginx/sites-enabled/*;
+  #include /etc/nginx/certificates/*;
+  #include /etc/nginx/conf.d/sub_filter_customized.conf;
+    
   # fallback in case we can't determine a type
   default_type application/octet-stream;
   sendfile on;
@@ -24,6 +29,26 @@ http {
           proxy_pass http://backend_hosts;
       }
   }
+  
+    server {
+      listen 8080;
+      
+      sub_filter 'Hello' 'Goodbye';
+      sub_filter 'friend' 'fellow';
+      sub_filter_once on;
+
+      location / {
+      
+          #proxy_pass https://192.168.0.160:8843;
+          proxy_pass https://www.google.com;
+
+          
+          sub_filter 'Hello' 'Goodbye';
+          sub_filter 'friend' 'fellow';
+          sub_filter 'Lucky' 'Happy!!!';
+          sub_filter_once on;
+      }
+   }
 }
 
 
